src/parser.output
Useless nonterminals

   declaration
   init_declarator_list_opt
   init_declarator_list
   init_declarator


Terminals which are not used

   KW_CASE
   KW_DEFAULT


Useless rules

  240 declaration: declaration_specifiers init_declarator_list_opt

  241 init_declarator_list_opt: /* empty */
  242                         | init_declarator_list

  243 init_declarator_list: init_declarator
  244                     | init_declarator_list ',' init_declarator

  245 init_declarator: declarator
  246                | declarator '=' assignment_expression
  247                | declarator '=' initializer


Rules never reduced

    8 external_declaration: /* empty */

  100 identifier_list_opt: /* empty */


State 1 conflicts: 21 shift/reduce
State 17 conflicts: 19 shift/reduce
State 18 conflicts: 19 shift/reduce
State 19 conflicts: 19 shift/reduce
State 20 conflicts: 19 shift/reduce
State 21 conflicts: 19 shift/reduce
State 22 conflicts: 19 shift/reduce
State 30 conflicts: 1 shift/reduce, 2 reduce/reduce
State 67 conflicts: 2 reduce/reduce
State 68 conflicts: 1 shift/reduce
State 173 conflicts: 1 reduce/reduce
State 271 conflicts: 1 shift/reduce
State 402 conflicts: 1 shift/reduce
State 407 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: /* empty */
    2                 | translation_unit external_declaration

    3 star_list_opt: /* empty */
    4              | star_list

    5 star_list: '*'
    6          | star_list '*'

    7 external_declaration: type_specifier sdecl ',' sdecl sdecl_list ';'
    8                     | /* empty */
    9                     | type_specifier star_list_opt IDENTIFIER '(' parameter_type_list_opt ')' compound_statement
   10                     | type_specifier star_list_opt IDENTIFIER '(' parameter_type_list_opt ')' ';'
   11                     | func_decl_specs IDENTIFIER '(' parameter_type_list_opt ')' compound_statement
   12                     | func_decl_specs IDENTIFIER '(' parameter_type_list_opt ')' ';'
   13                     | KW_TYPEDEF type_specifier star_list_opt IDENTIFIER ';'
   14                     | KW_TYPEDEF type_specifier star_list_opt IDENTIFIER array_dims ';'
   15                     | type_specifier star_list_opt IDENTIFIER '=' assignment_expression ';'
   16                     | KW_TYPEDEF type_specifier star_list_opt '(' '*' IDENTIFIER ')' '(' fp_param_list_opt ')' ';'
   17                     | KW_TYPEDEF type_specifier star_list_opt '(' '*' IDENTIFIER array_dims ')' '(' fp_param_list_opt ')' ';'
   18                     | type_specifier star_list_opt IDENTIFIER ';'
   19                     | type_specifier star_list_opt IDENTIFIER '=' initializer ';'
   20                     | type_specifier star_list_opt IDENTIFIER array_dims '=' initializer ';'
   21                     | function_definition

   22 func_decl_specs: type_specifier star_list_opt
   23                | KW_EXTERN func_decl_specs
   24                | KW_STATIC func_decl_specs
   25                | KW_CONST func_decl_specs
   26                | KW_VOLATILE func_decl_specs
   27                | KW_RESTRICT func_decl_specs
   28                | KW_INLINE func_decl_specs

   29 parameter_type_list_opt: /* empty */
   30                        | parameter_type_list

   31 parameter_type_list: parameter_list
   32                    | parameter_list ',' ELLIPSIS

   33 parameter_list: parameter_declaration
   34               | parameter_list ',' parameter_declaration

   35 parameter_declaration: type_specifier sdecl
   36                      | type_specifier

   37 declaration_specifiers: declaration_specifier
   38                       | declaration_specifiers declaration_specifier

   39 declaration_specifier: storage_class_specifier
   40                      | type_specifier
   41                      | type_qualifier
   42                      | function_specifier

   43 storage_class_specifier: KW_EXTERN
   44                        | KW_STATIC

   45 type_qualifier: KW_CONST
   46               | KW_VOLATILE
   47               | KW_RESTRICT

   48 function_specifier: KW_INLINE

   49 type_specifier: KW_VOID
   50               | KW_CHAR
   51               | KW_SHORT
   52               | KW_INT
   53               | KW_LONG
   54               | KW_SIGNED
   55               | KW_UNSIGNED
   56               | KW_FLOAT
   57               | KW_DOUBLE
   58               | struct_or_union_specifier
   59               | enum_specifier
   60               | TYPE_NAME

   61 array_dims: '[' INTEGER_CONSTANT ']'
   62           | array_dims '[' INTEGER_CONSTANT ']'

   63 struct_or_union_specifier: KW_STRUCT IDENTIFIER '{' struct_declaration_list_opt '}'
   64                          | KW_UNION IDENTIFIER '{' struct_declaration_list_opt '}'
   65                          | KW_STRUCT '{' struct_declaration_list_opt '}'
   66                          | KW_UNION '{' struct_declaration_list_opt '}'
   67                          | KW_STRUCT IDENTIFIER
   68                          | KW_UNION IDENTIFIER

   69 struct_declaration_list_opt: /* empty */
   70                            | struct_declaration_list

   71 struct_declaration_list: struct_declaration
   72                        | struct_declaration_list struct_declaration

   73 struct_declaration: declaration_specifiers struct_declarator_list ';'

   74 struct_declarator_list: struct_declarator
   75                       | struct_declarator_list ',' struct_declarator

   76 struct_declarator: declarator
   77                  | ':' constant_expression
   78                  | declarator ':' constant_expression

   79 enum_specifier: KW_ENUM IDENTIFIER '{' enumerator_list_opt '}'
   80               | KW_ENUM '{' enumerator_list_opt '}'
   81               | KW_ENUM IDENTIFIER

   82 enumerator_list_opt: /* empty */
   83                    | enumerator_list

   84 enumerator_list: enumerator
   85                | enumerator_list ',' enumerator

   86 enumerator: IDENTIFIER
   87           | IDENTIFIER '=' constant_expression

   88 declarator: pointer_opt direct_declarator

   89 pointer_opt: /* empty */
   90            | pointer

   91 pointer: '*'
   92        | '*' type_qualifier
   93        | '*' pointer
   94        | '*' type_qualifier pointer

   95 direct_declarator: IDENTIFIER
   96                  | '(' declarator ')'
   97                  | direct_declarator '[' assignment_expression_opt ']'
   98                  | direct_declarator '(' parameter_type_list_opt ')'
   99                  | direct_declarator '(' identifier_list_opt ')'

  100 identifier_list_opt: /* empty */
  101                    | identifier_list

  102 identifier_list: IDENTIFIER
  103                | identifier_list ',' IDENTIFIER

  104 fp_param_list_opt: /* empty */
  105                  | fp_param_list

  106 fp_param_list: fp_param
  107              | fp_param_list ',' fp_param

  108 fp_param: type_specifier star_list_opt
  109         | type_specifier star_list_opt IDENTIFIER

  110 function_definition: declaration_specifiers declarator compound_statement
  111                    | type_specifier declarator compound_statement

  112 statement: compound_statement
  113          | expression_statement
  114          | selection_statement
  115          | iteration_statement
  116          | jump_statement

  117 compound_statement: '{' block_item_list_opt '}'

  118 block_item_list_opt: /* empty */
  119                    | block_item_list

  120 block_item_list: block_item
  121                | block_item_list block_item

  122 block_item: type_specifier star_list_opt IDENTIFIER ';'
  123           | type_specifier star_list_opt IDENTIFIER '=' assignment_expression ';'
  124           | type_specifier star_list_opt IDENTIFIER '=' initializer ';'
  125           | type_specifier star_list_opt IDENTIFIER array_dims '=' initializer ';'
  126           | type_specifier sdecl ',' sdecl sdecl_list ';'
  127           | statement
  128           | KW_TYPEDEF type_specifier star_list_opt IDENTIFIER ';'
  129           | KW_TYPEDEF type_specifier type_specifier star_list_opt IDENTIFIER ';'

  130 sdecl_list: /* empty */
  131           | sdecl_list ',' sdecl

  132 sdecl: star_list_opt sdir

  133 sdir: IDENTIFIER
  134     | '(' sdecl ')'
  135     | '(' sdecl ')' '(' fp_param_list_opt ')'
  136     | sdir '[' assignment_expression_opt ']'

  137 expression_statement: ';'
  138                     | expression ';'

  139 selection_statement: KW_IF '(' expression ')' statement
  140                    | KW_IF '(' expression ')' statement KW_ELSE statement
  141                    | KW_SWITCH '(' expression ')' statement

  142 iteration_statement: KW_WHILE '(' expression ')' statement
  143                    | KW_DO statement KW_WHILE '(' expression ')' ';'
  144                    | KW_FOR '(' expression_opt ';' expression_opt ';' expression_opt ')' statement

  145 jump_statement: KW_RETURN expression_opt ';'
  146               | KW_BREAK ';'
  147               | KW_CONTINUE ';'
  148               | KW_GOTO IDENTIFIER ';'

  149 expression_opt: /* empty */
  150               | expression

  151 expression: assignment_expression
  152           | expression ',' assignment_expression

  153 assignment_expression_opt: /* empty */
  154                          | assignment_expression

  155 assignment_expression: conditional_expression
  156                      | unary_expression '=' assignment_expression
  157                      | unary_expression ADD_ASSIGN assignment_expression
  158                      | unary_expression SUB_ASSIGN assignment_expression
  159                      | unary_expression MUL_ASSIGN assignment_expression
  160                      | unary_expression DIV_ASSIGN assignment_expression
  161                      | unary_expression MOD_ASSIGN assignment_expression
  162                      | unary_expression AND_ASSIGN assignment_expression
  163                      | unary_expression OR_ASSIGN assignment_expression
  164                      | unary_expression XOR_ASSIGN assignment_expression
  165                      | unary_expression LSHIFT_ASSIGN assignment_expression
  166                      | unary_expression RSHIFT_ASSIGN assignment_expression

  167 conditional_expression: logical_or_expression
  168                       | logical_or_expression '?' expression ':' conditional_expression

  169 logical_or_expression: logical_and_expression
  170                      | logical_or_expression LOGOR logical_and_expression

  171 logical_and_expression: inclusive_or_expression
  172                       | logical_and_expression LOGAND inclusive_or_expression

  173 inclusive_or_expression: exclusive_or_expression
  174                        | inclusive_or_expression '|' exclusive_or_expression

  175 exclusive_or_expression: and_expression
  176                        | exclusive_or_expression '^' and_expression

  177 and_expression: equality_expression
  178               | and_expression '&' equality_expression

  179 equality_expression: relational_expression
  180                    | equality_expression EQ relational_expression
  181                    | equality_expression NE relational_expression

  182 relational_expression: shift_expression
  183                      | relational_expression '<' shift_expression
  184                      | relational_expression '>' shift_expression
  185                      | relational_expression LE shift_expression
  186                      | relational_expression GE shift_expression

  187 shift_expression: additive_expression
  188                 | shift_expression LSHIFT additive_expression
  189                 | shift_expression RSHIFT additive_expression

  190 additive_expression: multiplicative_expression
  191                    | additive_expression '+' multiplicative_expression
  192                    | additive_expression '-' multiplicative_expression

  193 multiplicative_expression: unary_expression
  194                          | multiplicative_expression '*' unary_expression
  195                          | multiplicative_expression '/' unary_expression
  196                          | multiplicative_expression '%' unary_expression

  197 unary_expression: postfix_expression
  198                 | INC unary_expression
  199                 | DEC unary_expression
  200                 | '+' unary_expression
  201                 | '-' unary_expression
  202                 | '!' unary_expression
  203                 | '~' unary_expression
  204                 | KW_SIZEOF unary_expression
  205                 | KW_SIZEOF '(' type_specifier ')'

  206 postfix_expression: primary_expression
  207                   | postfix_expression '(' argument_expression_list_opt ')'
  208                   | postfix_expression '[' expression ']'
  209                   | postfix_expression '.' IDENTIFIER
  210                   | postfix_expression ARROW IDENTIFIER
  211                   | postfix_expression INC
  212                   | postfix_expression DEC

  213 argument_expression_list_opt: /* empty */
  214                             | argument_expression_list

  215 argument_expression_list: assignment_expression
  216                         | argument_expression_list ',' assignment_expression

  217 primary_expression: IDENTIFIER
  218                   | INTEGER_CONSTANT
  219                   | FLOAT_CONSTANT
  220                   | CHAR_CONSTANT
  221                   | STRING_LITERAL
  222                   | '(' expression ')'

  223 initializer: assignment_expression
  224            | '{' initializer_list_opt '}'

  225 initializer_list_opt: /* empty */
  226                     | initializer_list

  227 initializer_list: initializer
  228                 | designated_initializer
  229                 | initializer_list ',' initializer
  230                 | initializer_list ',' designated_initializer

  231 designated_initializer: '.' IDENTIFIER '=' initializer
  232                       | '[' constant_expression ']' '=' initializer
  233                       | designation '=' initializer

  234 designation: designator
  235            | designation designator

  236 designator: '.' IDENTIFIER
  237           | '[' constant_expression ']'
  238           | '[' constant_expression ELLIPSIS constant_expression ']'

  239 constant_expression: conditional_expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 202
'%' (37) 196
'&' (38) 178
'(' (40) 9 10 11 12 16 17 96 98 99 134 135 139 140 141 142 143 144
    205 207 222
')' (41) 9 10 11 12 16 17 96 98 99 134 135 139 140 141 142 143 144
    205 207 222
'*' (42) 5 6 16 17 91 92 93 94 194
'+' (43) 191 200
',' (44) 7 32 34 75 85 103 107 126 131 152 216 229 230
'-' (45) 192 201
'.' (46) 209 231 236
'/' (47) 195
':' (58) 77 78 168
';' (59) 7 10 12 13 14 15 16 17 18 19 20 73 122 123 124 125 126 128
    129 137 138 143 144 145 146 147 148
'<' (60) 183
'=' (61) 15 19 20 87 123 124 125 156 231 232 233
'>' (62) 184
'?' (63) 168
'[' (91) 61 62 97 136 208 232 237 238
']' (93) 61 62 97 136 208 232 237 238
'^' (94) 176
'{' (123) 63 64 65 66 79 80 117 224
'|' (124) 174
'}' (125) 63 64 65 66 79 80 117 224
'~' (126) 203
error (256)
IDENTIFIER (258) 9 10 11 12 13 14 15 16 17 18 19 20 63 64 67 68 79
    81 86 87 95 102 103 109 122 123 124 125 128 129 133 148 209 210
    217 231 236
TYPE_NAME (259) 60
STRING_LITERAL (260) 221
INTEGER_CONSTANT (261) 61 62 218
FLOAT_CONSTANT (262) 219
CHAR_CONSTANT (263) 220
KW_VOID (264) 49
KW_CHAR (265) 50
KW_SHORT (266) 51
KW_INT (267) 52
KW_LONG (268) 53
KW_SIGNED (269) 54
KW_UNSIGNED (270) 55
KW_FLOAT (271) 56
KW_DOUBLE (272) 57
KW_STRUCT (273) 63 65 67
KW_UNION (274) 64 66 68
KW_ENUM (275) 79 80 81
KW_TYPEDEF (276) 13 14 16 17 128 129
KW_RETURN (277) 145
KW_IF (278) 139 140
KW_ELSE (279) 140
KW_WHILE (280) 142 143
KW_FOR (281) 144
KW_DO (282) 143
KW_SWITCH (283) 141
KW_CASE (284)
KW_DEFAULT (285)
KW_BREAK (286) 146
KW_CONTINUE (287) 147
KW_GOTO (288) 148
KW_CONST (289) 25 45
KW_VOLATILE (290) 26 46
KW_RESTRICT (291) 27 47
KW_INLINE (292) 28 48
KW_EXTERN (293) 23 43
KW_STATIC (294) 24 44
KW_SIZEOF (295) 204 205
ELLIPSIS (296) 32 238
ARROW (297) 210
INC (298) 198 211
DEC (299) 199 212
LSHIFT (300) 188
RSHIFT (301) 189
LE (302) 185
GE (303) 186
EQ (304) 180
NE (305) 181
LOGAND (306) 172
LOGOR (307) 170
ADD_ASSIGN (308) 157
SUB_ASSIGN (309) 158
MUL_ASSIGN (310) 159
DIV_ASSIGN (311) 160
MOD_ASSIGN (312) 161
AND_ASSIGN (313) 162
OR_ASSIGN (314) 163
XOR_ASSIGN (315) 164
LSHIFT_ASSIGN (316) 165
RSHIFT_ASSIGN (317) 166
PREFER_EMPTY (318)


Nonterminals, with rules where they appear

$accept (88)
    on left: 0
translation_unit (89)
    on left: 1 2, on right: 0 2
star_list_opt (90)
    on left: 3 4, on right: 9 10 13 14 15 16 17 18 19 20 22 108 109
    122 123 124 125 128 129 132
star_list (91)
    on left: 5 6, on right: 4 6
external_declaration (92)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21,
    on right: 2
func_decl_specs (93)
    on left: 22 23 24 25 26 27 28, on right: 11 12 23 24 25 26 27 28
parameter_type_list_opt (94)
    on left: 29 30, on right: 9 10 11 12 98
parameter_type_list (95)
    on left: 31 32, on right: 30
parameter_list (96)
    on left: 33 34, on right: 31 32 34
parameter_declaration (97)
    on left: 35 36, on right: 33 34
declaration_specifiers (98)
    on left: 37 38, on right: 38 73 110
declaration_specifier (99)
    on left: 39 40 41 42, on right: 37 38
storage_class_specifier (100)
    on left: 43 44, on right: 39
type_qualifier (101)
    on left: 45 46 47, on right: 41 92 94
function_specifier (102)
    on left: 48, on right: 42
type_specifier (103)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60, on right: 7 9 10
    13 14 15 16 17 18 19 20 22 35 36 40 108 109 111 122 123 124 125
    126 128 129 205
array_dims (104)
    on left: 61 62, on right: 14 17 20 62 125
struct_or_union_specifier (105)
    on left: 63 64 65 66 67 68, on right: 58
struct_declaration_list_opt (106)
    on left: 69 70, on right: 63 64 65 66
struct_declaration_list (107)
    on left: 71 72, on right: 70 72
struct_declaration (108)
    on left: 73, on right: 71 72
struct_declarator_list (109)
    on left: 74 75, on right: 73 75
struct_declarator (110)
    on left: 76 77 78, on right: 74 75
enum_specifier (111)
    on left: 79 80 81, on right: 59
enumerator_list_opt (112)
    on left: 82 83, on right: 79 80
enumerator_list (113)
    on left: 84 85, on right: 83 85
enumerator (114)
    on left: 86 87, on right: 84 85
declarator (115)
    on left: 88, on right: 76 78 96 110 111
pointer_opt (116)
    on left: 89 90, on right: 88
pointer (117)
    on left: 91 92 93 94, on right: 90 93 94
direct_declarator (118)
    on left: 95 96 97 98 99, on right: 88 97 98 99
identifier_list_opt (119)
    on left: 100 101, on right: 99
identifier_list (120)
    on left: 102 103, on right: 101 103
fp_param_list_opt (121)
    on left: 104 105, on right: 16 17 135
fp_param_list (122)
    on left: 106 107, on right: 105 107
fp_param (123)
    on left: 108 109, on right: 106 107
function_definition (124)
    on left: 110 111, on right: 21
statement (125)
    on left: 112 113 114 115 116, on right: 127 139 140 141 142 143
    144
compound_statement (126)
    on left: 117, on right: 9 11 110 111 112
block_item_list_opt (127)
    on left: 118 119, on right: 117
block_item_list (128)
    on left: 120 121, on right: 119 121
block_item (129)
    on left: 122 123 124 125 126 127 128 129, on right: 120 121
sdecl_list (130)
    on left: 130 131, on right: 7 126 131
sdecl (131)
    on left: 132, on right: 7 35 126 131 134 135
sdir (132)
    on left: 133 134 135 136, on right: 132 136
expression_statement (133)
    on left: 137 138, on right: 113
selection_statement (134)
    on left: 139 140 141, on right: 114
iteration_statement (135)
    on left: 142 143 144, on right: 115
jump_statement (136)
    on left: 145 146 147 148, on right: 116
expression_opt (137)
    on left: 149 150, on right: 144 145
expression (138)
    on left: 151 152, on right: 138 139 140 141 142 143 150 152 168
    208 222
assignment_expression_opt (139)
    on left: 153 154, on right: 97 136
assignment_expression (140)
    on left: 155 156 157 158 159 160 161 162 163 164 165 166,
    on right: 15 123 151 152 154 156 157 158 159 160 161 162 163 164
    165 166 215 216 223
conditional_expression (141)
    on left: 167 168, on right: 155 168 239
logical_or_expression (142)
    on left: 169 170, on right: 167 168 170
logical_and_expression (143)
    on left: 171 172, on right: 169 170 172
inclusive_or_expression (144)
    on left: 173 174, on right: 171 172 174
exclusive_or_expression (145)
    on left: 175 176, on right: 173 174 176
and_expression (146)
    on left: 177 178, on right: 175 176 178
equality_expression (147)
    on left: 179 180 181, on right: 177 178 180 181
relational_expression (148)
    on left: 182 183 184 185 186, on right: 179 180 181 183 184 185
    186
shift_expression (149)
    on left: 187 188 189, on right: 182 183 184 185 186 188 189
additive_expression (150)
    on left: 190 191 192, on right: 187 188 189 191 192
multiplicative_expression (151)
    on left: 193 194 195 196, on right: 190 191 192 194 195 196
unary_expression (152)
    on left: 197 198 199 200 201 202 203 204 205, on right: 156 157
    158 159 160 161 162 163 164 165 166 193 194 195 196 198 199 200
    201 202 203 204
postfix_expression (153)
    on left: 206 207 208 209 210 211 212, on right: 197 207 208 209
    210 211 212
argument_expression_list_opt (154)
    on left: 213 214, on right: 207
argument_expression_list (155)
    on left: 215 216, on right: 214 216
primary_expression (156)
    on left: 217 218 219 220 221 222, on right: 206
initializer (157)
    on left: 223 224, on right: 19 20 124 125 227 229 231 232 233
initializer_list_opt (158)
    on left: 225 226, on right: 224
initializer_list (159)
    on left: 227 228 229 230, on right: 226 229 230
designated_initializer (160)
    on left: 231 232 233, on right: 228 230
designation (161)
    on left: 234 235, on right: 233 235
designator (162)
    on left: 236 237 238, on right: 234 235
constant_expression (163)
    on left: 239, on right: 77 78 87 232 237 238


state 0

    0 $accept: . translation_unit $end

    $default  reduce using rule 1 (translation_unit)

    translation_unit  go to state 1


state 1

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end         shift, and go to state 2
    TYPE_NAME    shift, and go to state 3
    KW_VOID      shift, and go to state 4
    KW_CHAR      shift, and go to state 5
    KW_SHORT     shift, and go to state 6
    KW_INT       shift, and go to state 7
    KW_LONG      shift, and go to state 8
    KW_SIGNED    shift, and go to state 9
    KW_UNSIGNED  shift, and go to state 10
    KW_FLOAT     shift, and go to state 11
    KW_DOUBLE    shift, and go to state 12
    KW_STRUCT    shift, and go to state 13
    KW_UNION     shift, and go to state 14
    KW_ENUM      shift, and go to state 15
    KW_TYPEDEF   shift, and go to state 16
    KW_CONST     shift, and go to state 17
    KW_VOLATILE  shift, and go to state 18
    KW_RESTRICT  shift, and go to state 19
    KW_INLINE    shift, and go to state 20
    KW_EXTERN    shift, and go to state 21
    KW_STATIC    shift, and go to state 22

    $end         [reduce using rule 8 (external_declaration)]
    TYPE_NAME    [reduce using rule 8 (external_declaration)]
    KW_VOID      [reduce using rule 8 (external_declaration)]
    KW_CHAR      [reduce using rule 8 (external_declaration)]
    KW_SHORT     [reduce using rule 8 (external_declaration)]
    KW_INT       [reduce using rule 8 (external_declaration)]
    KW_LONG      [reduce using rule 8 (external_declaration)]
    KW_SIGNED    [reduce using rule 8 (external_declaration)]
    KW_UNSIGNED  [reduce using rule 8 (external_declaration)]
    KW_FLOAT     [reduce using rule 8 (external_declaration)]
    KW_DOUBLE    [reduce using rule 8 (external_declaration)]
    KW_STRUCT    [reduce using rule 8 (external_declaration)]
    KW_UNION     [reduce using rule 8 (external_declaration)]
    KW_ENUM      [reduce using rule 8 (external_declaration)]
    KW_TYPEDEF   [reduce using rule 8 (external_declaration)]
    KW_CONST     [reduce using rule 8 (external_declaration)]
    KW_VOLATILE  [reduce using rule 8 (external_declaration)]
    KW_RESTRICT  [reduce using rule 8 (external_declaration)]
    KW_INLINE    [reduce using rule 8 (external_declaration)]
    KW_EXTERN    [reduce using rule 8 (external_declaration)]
    KW_STATIC    [reduce using rule 8 (external_declaration)]

    external_declaration       go to state 23
    func_decl_specs            go to state 24
    declaration_specifiers     go to state 25
    declaration_specifier      go to state 26
    storage_class_specifier    go to state 27
    type_qualifier             go to state 28
    function_specifier         go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    enum_specifier             go to state 32
    function_definition        go to state 33


state 2

    0 $accept: translation_unit $end .

    $default  accept


state 3

   60 type_specifier: TYPE_NAME .

    $default  reduce using rule 60 (type_specifier)


state 4

   49 type_specifier: KW_VOID .

    $default  reduce using rule 49 (type_specifier)


state 5

   50 type_specifier: KW_CHAR .

    $default  reduce using rule 50 (type_specifier)


state 6

   51 type_specifier: KW_SHORT .

    $default  reduce using rule 51 (type_specifier)


state 7

   52 type_specifier: KW_INT .

    $default  reduce using rule 52 (type_specifier)


state 8

   53 type_specifier: KW_LONG .

    $default  reduce using rule 53 (type_specifier)


state 9

   54 type_specifier: KW_SIGNED .

    $default  reduce using rule 54 (type_specifier)


state 10

   55 type_specifier: KW_UNSIGNED .

    $default  reduce using rule 55 (type_specifier)


state 11

   56 type_specifier: KW_FLOAT .

    $default  reduce using rule 56 (type_specifier)


state 12

   57 type_specifier: KW_DOUBLE .

    $default  reduce using rule 57 (type_specifier)


state 13

   63 struct_or_union_specifier: KW_STRUCT . IDENTIFIER '{' struct_declaration_list_opt '}'
   65                          | KW_STRUCT . '{' struct_declaration_list_opt '}'
   67                          | KW_STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 34
    '{'         shift, and go to state 35


state 14

   64 struct_or_union_specifier: KW_UNION . IDENTIFIER '{' struct_declaration_list_opt '}'
   66                          | KW_UNION . '{' struct_declaration_list_opt '}'
   68                          | KW_UNION . IDENTIFIER

    IDENTIFIER  shift, and go to state 36
    '{'         shift, and go to state 37


state 15

   79 enum_specifier: KW_ENUM . IDENTIFIER '{' enumerator_list_opt '}'
   80               | KW_ENUM . '{' enumerator_list_opt '}'
   81               | KW_ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


state 16

   13 external_declaration: KW_TYPEDEF . type_specifier star_list_opt IDENTIFIER ';'
   14                     | KW_TYPEDEF . type_specifier star_list_opt IDENTIFIER array_dims ';'
   16                     | KW_TYPEDEF . type_specifier star_list_opt '(' '*' IDENTIFIER ')' '(' fp_param_list_opt ')' ';'
   17                     | KW_TYPEDEF . type_specifier star_list_opt '(' '*' IDENTIFIER array_dims ')' '(' fp_param_list_opt ')' ';'

    TYPE_NAME    shift, and go to state 3
    KW_VOID      shift, and go to state 4
    KW_CHAR      shift, and go to state 5
    KW_SHORT     shift, and go to state 6
    KW_INT       shift, and go to state 7
    KW_LONG      shift, and go to state 8
    KW_SIGNED    shift, and go to state 9
    KW_UNSIGNED  shift, and go to state 10
    KW_FLOAT     shift, and go to state 11
    KW_DOUBLE    shift, and go to state 12
    KW_STRUCT    shift, and go to state 13
    KW_UNION     shift, and go to state 14
    KW_ENUM      shift, and go to state 15

    type_specifier             go to state 40
    struct_or_union_specifier  go to state 31
    enum_specifier             go to state 32


state 17

   25 func_decl_specs: KW_CONST . func_decl_specs
   45 type_qualifier: KW_CONST .

    TYPE_NAME    shift, and go to state 3
    KW_VOID      shift, and go to state 4
    KW_CHAR      shift, and go to state 5
    KW_SHORT     shift, and go to state 6
    KW_INT       shift, and go to state 7
    KW_LONG      shift, and go to state 8
    KW_SIGNED    shift, and go to state 9
    KW_UNSIGNED  shift, and go to state 10
    KW_FLOAT     shift, and go to state 11
    KW_DOUBLE    shift, and go to state 12
    KW_STRUCT    shift, and go to state 13
    KW_UNION     shift, and go to state 14
    KW_ENUM      shift, and go to state 15
    KW_CONST     shift, and go to state 41
    KW_VOLATILE  shift, and go to state 42
    KW_RESTRICT  shift, and go to state 43
    KW_INLINE    shift, and go to state 44
    KW_EXTERN    shift, and go to state 45
    KW_STATIC    shift, and go to state 46

    TYPE_NAME    [reduce using rule 45 (type_qualifier)]
    KW_VOID      [reduce using rule 45 (type_qualifier)]
    KW_CHAR      [reduce using rule 45 (type_qualifier)]
    KW_SHORT     [reduce using rule 45 (type_qualifier)]
    KW_INT       [reduce using rule 45 (type_qualifier)]
    KW_LONG      [reduce using rule 45 (type_qualifier)]
    KW_SIGNED    [reduce using rule 45 (type_qualifier)]
    KW_UNSIGNED  [reduce using rule 45 (type_qualifier)]
    KW_FLOAT     [reduce using rule 45 (type_qualifier)]
    KW_DOUBLE    [reduce using rule 45 (type_qualifier)]
    KW_STRUCT    [reduce using rule 45 (type_qualifier)]
    KW_UNION     [reduce using rule 45 (type_qualifier)]
    KW_ENUM      [reduce using rule 45 (type_qualifier)]
    KW_CONST     [reduce using rule 45 (type_qualifier)]
    KW_VOLATILE  [reduce using rule 45 (type_qualifier)]
    KW_RESTRICT  [reduce using rule 45 (type_qualifier)]
    KW_INLINE    [reduce using rule 45 (type_qualifier)]
    KW_EXTERN    [reduce using rule 45 (type_qualifier)]
    KW_STATIC    [reduce using rule 45 (type_qualifier)]
    $default     reduce using rule 45 (type_qualifier)

    func_decl_specs            go to state 47
    type_specifier             go to state 48
    struct_or_union_specifier  go to state 31
    enum_specifier             go to state 32


state 18

   26 func_decl_specs: KW_VOLATILE . func_decl_specs
   46 type_qualifier: KW_VOLATILE .

    TYPE_NAME    shift, and go to state 3
    KW_VOID      shift, and go to state 4
    KW_CHAR      shift, and go to state 5
    KW_SHORT     shift, and go to state 6
    KW_INT       shift, and go to state 7
    KW_LONG      shift, and go to state 8
    KW_SIGNED    shift, and go to state 9
    KW_UNSIGNED  shift, and go to state 10
    KW_FLOAT     shift, and go to state 11
    KW_DOUBLE    shift, and go to state 12
    KW_STRUCT    shift, and go to state 13
    KW_UNION     shift, and go to state 14
    KW_ENUM      shift, and go to state 15
    KW_CONST     shift, and go to state 41
    KW_VOLATILE  shift, and go to state 42
    KW_RESTRICT  shift, and go to state 43
    KW_INLINE    shift, and go to state 44
    KW_EXTERN    shift, and go to state 45
    KW_STATIC    shift, and go to state 46

    TYPE_NAME    [reduce using rule 46 (type_qualifier)]
    KW_VOID      [reduce using rule 46 (type_qualifier)]
    KW_CHAR      [reduce using rule 46 (type_qualifier)]
    KW_SHORT     [reduce using rule 46 (type_qualifier)]
    KW_INT       [reduce using rule 46 (type_qualifier)]
    KW_LONG      [reduce using rule 46 (type_qualifier)]
    KW_SIGNED    [reduce using rule 46 (type_qualifier)]
    KW_UNSIGNED  [reduce using rule 46 (type_qualifier)]
    KW_FLOAT     [reduce using rule 46 (type_qualifier)]
    KW_DOUBLE    [reduce using rule 46 (type_qualifier)]
    KW_STRUCT    [reduce using rule 46 (type_qualifier)]
    KW_UNION     [reduce using rule 46 (type_qualifier)]
    KW_ENUM      [reduce using rule 46 (type_qualifier)]
    KW_CONST     [reduce using rule 46 (type_qualifier)]
    KW_VOLATILE  [reduce using rule 46 (type_qualifier)]
    KW_RESTRICT  [reduce using rule 46 (type_qualifier)]
    KW_INLINE    [reduce using rule 46 (type_qualifier)]
    KW_EXTERN    [reduce using rule 46 (type_qualifier)]
    KW_STATIC    [reduce using rule 46 (type_qualifier)]
    $default     reduce using rule 46 (type_qualifier)

    func_decl_specs            go to state 49
    type_specifier             go to state 48
    struct_or_union_specifier  go to state 31
    enum_specifier             go to state 32


state 19

   27 func_decl_specs: KW_RESTRICT . func_decl_specs
   47 type_qualifier: KW_RESTRICT .

    TYPE_NAME    shift, and go to state 3
    KW_VOID      shift, and go to state 4
    KW_CHAR      shift, and go to state 5
    KW_SHORT     shift, and go to state 6
    KW_INT       shift, and go to state 7
    KW_LONG      shift, and go to state 8
    KW_SIGNED    shift, and go to state 9
    KW_UNSIGNED  shift, and go to state 10
    KW_FLOAT     shift, and go to state 11
    KW_DOUBLE    shift, and go to state 12
    KW_STRUCT    shift, and go to state 13
    KW_UNION     shift, and go to state 14
    KW_ENUM      shift, and go to state 15
    KW_CONST     shift, and go to state 41
    KW_VOLATILE  shift, and go to state 42
    KW_RESTRICT  shift, and go to state 43
    KW_INLINE    shift, and go to state 44
    KW_EXTERN    shift, and go to state 45
    KW_STATIC    shift, and go to state 46
